crates/rome_formatter/tests/specs/prettier/typescript/override-modifiers/parameter-property.ts.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 123
expression: parameter-property.ts

---
# Input
```js
class D extends B {
  constructor(override foo: string) {
    super();
  }
}

```

# Output
```js
class D extends B {
  constructor(override foo: string) {
    super();
  }
}

```

# Errors
```
error[SyntaxError]: expected `,` but instead found `foo`
  ┌─ parameter-property.ts:2:24
  │
2 │   constructor(override foo: string) {
  │                        ^^^ unexpected


```


